making progress but I feel like I'm bashing my head against the wall. Need to watch the numbers on it and make sure it's all making sense

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(${PROJECT_NAME} ${SRC_FILES})
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE /W4)
 else()
-    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
+    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -O3)
 endif()
 
 # find and link sdl2
